Attempting to resolve glitch where background scrolls behind modal

--- a/client/src/components/UI/Modal.css
+++ b/client/src/components/UI/Modal.css
@@ -32,7 +32,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 5;
